--- a/robin_in/src/index.css
+++ b/robin_in/src/index.css
@@ -8,6 +8,9 @@
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
+
+
+
 /* Scroll bar */
 /* 스크롤바의 너비 */
 ::-webkit-scrollbar {
@@ -32,3 +35,43 @@
 /* ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 } */
+
+/* swiper */
+.swiper-container {
+    width: 100%;
+    height: 100%; /* 또는 원하는 높이값 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    color: #000;
+    background-color: #fff;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    font-size: 20px;
+}
+
+.swiper-button-prev {
+    left: 10px;
+}
+
+.swiper-button-next {
+    right: 10px;
+}
+
+@media (min-width: 768px) {
+    .mobile-only {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) and (max-width: 1024px) {
+    .web-only {
+        display: none;
+    }
+}
