--- a/robin_in/src/index.css
+++ b/robin_in/src/index.css
@@ -12,13 +12,18 @@
     font-family: 'Noto Serif KR', serif !important;
 }
 
-;
 
 .title_b {
     font-family: 'Song Myung', serif !important;
 }
 
-;
+.the_first {
+    z-index: 9999;
+}
+
+.the_second {
+    z-index: 5555;
+}
 
 /* Scroll bar */
 /* 스크롤바의 너비 */
